# ocaml-flambda2-wasm

./: .depend  .gitignore  .gitmodules  Makefile  OVERVIEW.adoc  README.adoc  dune  flambda2.sh  flambda2.sh.templ  optcompile.sh  runtime.wasm  test.wasm
asmcomp/: asmgen.ml  cmm.ml  cmm_helpers.ml  cmm_helpers.mli  comballoc.ml  mach.ml  mach.mli  selectgen.ml
bytecomp/: bytegen.ml
driver/: compenv.ml  main_args.ml  main_args.mli  optcompile.ml  optmain.ml
lambda/: debuginfo.ml  debuginfo.mli  lambda.ml  lambda.mli  matching.ml  printlambda.ml  simplif.ml  translclass.ml  translcore.ml  translmod.ml  translobj.ml  translprim.ml
middle_end/flambda2.0/simplify/: dune  rec_modules  simplify_common.ml  simplify_common.mli  simplify_expr.rec.ml  simplify_import.ml  simplify_import.mli  simplify_named.rec.ml  simplify_named.rec.mli  simplify_set_of_closures.rec.ml  simplify_set_of_closures.rec.mli  simplify_static.rec.ml  simplify_static_const.rec.ml  simplify_static_const.rec.mli  simplify_variadic_primitive.ml
middle_end/flambda2.0/simplify/env/: downwards_acc.ml  downwards_acc.mli  simplify_env_and_result.ml  simplify_env_and_result_intf.ml
middle_end/flambda2.0/simplify/template/: simplify.templ.ml
middle_end/flambda2.0/simplify/typing_helpers/: continuation_uses.ml  reification.ml
ocamltest/: ocaml_compilers.ml  ocaml_tests.ml
stdlib/: obj.ml
testsuite/: Makefile
tools/: Makefile
toplevel/: opttoploop.ml
utils/: clflags.ml  clflags.mli  identifiable.ml  identifiable.mli  misc.ml  misc.mli  one_bit_fewer.ml  one_bit_less.ml  targetint.ml  (+1 more)
(+156 files in other folders)
